--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body class="container">
-		<h1>Пронина Ангелина</h1>
+		<h1>Пронина Ангелина Евгеньевна тестировщик</h1>
 
 		<div class="item">
 			<img class="photo" src="me.jpg" width="220" height="220" alt="фото">
