--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 				<a href="http://t.me/Angelina_Pronina_HI">telegram</a> 
 				<br>
-				<a href="mailto:angelinamaklakowa@yandex.ru">email</a>
+				<a href="mailto:angelinamaklakowa@yandex.ru">emaill</a>
 				
 				
 		
